[project]
name = "simulink_gym"
description = "Gym Interface Wrapper for Simulink Models"
readme = "Readme.md"
requires-python = ">=3.11"
keywords = ["reinforcement learning", "gym", "Matlab", "Simulink"]
license = {file = "License"}
authors = [
  {name="Johannes Brust", email="johannes.brust@gmail.com"},
]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "gymnasium>=0.29.1",
    "matlabengine>=24.2.2",
    "numpy",
]
dynamic = ["version"]

[project.optional-dependencies]
examples = ["stable-baselines3", "rich", "tqdm", "tensorboard", "notebook"]

[project.urls]
"Homepage" = "https://github.com/johbrust/simulink_gym"
"Bug Tracker" = "https://github.com/johbrust/simulink_gym/issues"
"Project Management" = "https://quire.io/w/Simulink_Gym"

[tool.ruff]
line-length = 88

lint.select = [
    "E",        # pycodestyle errors
    "F",        # Pyflakes
    "I001",     # isort
    "PIE790",   # Unnecessary pass statements
    "D10",      # Missing docstrings
    "D213",     # Multi-line docstring summary should start at the second line
    "D400",     # First line should end with a period
]

[tool.setuptools]
packages = ["simulink_gym", "simulink_gym.utils", "simulink_block_lib"]

[tool.setuptools.dynamic]
version = {attr = "simulink_gym.__version__"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.9.1",
]
